# MeltVerb

./: .gitignore  CLAUDE.md  CMakeLists.txt
.claude/: settings.json
.claude/commands/: build-check.md  build-fix.md
.claude/handoff/: design.md  spec.md  tasks.md
Source/: LevelMeter.h  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h
Source/DSP/: DebugMeter.h  InputDiffuser.h  MeltDelay.h  MeltEngine.cpp  MeltEngine.h  ReverbTank.cpp  ReverbTank.h  ToneFilter.h
Tests/: MeltEngineTests.cpp
Tools/: meltverb_config.json  validate.sh
scripts/: run-pluginval.sh
